tests/ui/failing/cast-rfc0401-vtable-kinds.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.03s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/cast/cast-rfc0401-vtable-kinds.rs`
error[E0606]: casting `*const (dyn Foo<u32> + 'a)` as `*const dyn Foo<u16>` is invalid
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/cast/cast-rfc0401-vtable-kinds.rs:20:39
   |
20 |     let foo_e : *const dyn Foo<u16> = t as *const _;
   |                                       ^^^^^^^^^^^^^
   |
   = note: the trait objects may have different vtables

error[E0606]: casting `*const dyn Foo<u16>` as `*mut dyn Foo<u32>` is invalid
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/cast/cast-rfc0401-vtable-kinds.rs:21:15
   |
21 |     let r_1 = foo_e as *mut dyn Foo<u32>;
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the trait objects may have different vtables

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0606`.
